# dataregi

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  build.sh  docker-compose.yml  run.sh  run_docker.sh  test.sh
.cargo/: config.toml
doc/: api.txt  db.txt  site.txt  todo.txt
migrations/1_users/: up.sql
migrations/2021-09-08-052707_users/: up.sql
migrations/2021-09-10-061620_documents/: up.sql
migrations/2021-10-28-184722_accesses/: up.sql
migrations/2021-11-12-082833_limits/: up.sql
migrations/2_organizations/: up.sql
migrations/3_documents/: up.sql
migrations/4_accesses/: down.sql
migrations/6_tokens/: up.sql
site/: styles.css
site/static/: index.html  styles.css
src/: accesses.rs  base.rs  docs.rs  lib.rs  limits.rs  main.rs  model.rs  orgs.rs  profiles.rs  schema.rs
templates/: doc.html.tera  doc_list.html.tera  header.html.tera  home.html.tera  index.html.tera  list.html.tera  macros.html.tera  org.html.tera  page_header.html.tera  profile.html.tera  script.html.tera  toast.html.tera
test_data/: 1sheet1cell.ods  1sheet1col.ods  1sheet1row.ods
test_data/v2/: 1sheet1cell.ods
tests/: accesses_test.rs  base_test.rs  docs_test.rs  test.sql
tests/api/: accesses_test.rs  base_test.rs  common.rs  docs_test.rs  limits_test.rs  main.rs  orgs_test.rs  profiles_test.rs
tests/common/: mod.rs
