[package]
name = "dataregi"
version = "0.1.0"
edition = "2018"


[dependencies]
serde = "1.0.130"
rocket = {version = "0.5.0-rc.1", features = ["json","tls","secrets"]}
rocket_dyn_templates = {version = "0.1.0-rc.1", features = ["tera"]}
failure = {version = "0.1.8",features = ["derive"]}
lettre = { version = "0.10.0-rc.1", default-features = false, features = ["builder"] }
rusoto_core = { version = "0.47", default-features = false, features = ["rustls"] }
rusoto_ses = { version = "0.47", default-features = false, features = ["rustls"] }
base64 = "0.13.0"
rand = "0.8.4"