[package]
name = "dataregi"
version = "0.1.0"
edition = "2018"
[[bin]]
name = "dataregi"
path = "src/main.rs"

[dependencies]
serde = "1.0.130"
serde_json = "1.0.68"
rocket = {version = "0.5.0-rc.1", features = ["json","tls","secrets"]}
rocket_dyn_templates = {version = "0.1.0-rc.1", features = ["tera"]}
rocket_sync_db_pools = {version = "0.1.0-rc.1", default-features = false, features = ["diesel_postgres_pool"]}
failure = {version = "0.1.8",features = ["derive"]}
lettre = { version = "0.10.0-rc.1", default-features = false, features = ["builder"] }
rusoto_core = { version = "0.47", default-features = false, features = ["rustls"] }
rusoto_ses = { version = "0.47", default-features = false, features = ["rustls"] }
rusoto_sqs = { version = "0.47", default-features = false, features = ["rustls"] }
rusoto_s3 = { version = "0.47", default-features = false, features = ["rustls"] }
base64 = "0.13.0"
rand = "0.8.4"
diesel = { version = "1.4.7", features = ["postgres", "r2d2", "uuidv07", "chrono"] }
diesel_migrations = "1.4"
uuid = { version = "0.8.2", features= ["serde", "v4"] }
chrono = "0.4.19"
figment = "0.10.6"
jsonwebtoken = "7.2.0"
jsonwebtoken-google = "0.1.0"
futures = "0.3.18"
#email-parser = { version = "0.5.0", default-features = false, features = ["sender","from","to","cc","mime"]}
mailparse = "0.13.7"
sloggers = "2.1.1"
slog = "2.7.0"
slog-scope = "4.4.0"

[dev-dependencies] 
serial_test = "0.5.1"